# jira2py

./: .buildinfo  .env.example  .envrc  .gitignore  404.html  CNAME  IMPROVEMENTS.md  Makefile  README-dev.md  README.md  __init__.py  aider_improvements.md  api-reference.json  fields.py  index.html  issue.py  jira.py  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dev.txt   requirements.txt  robots.txt  search.py  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: documentation.yml  publish.yml
_sources/: index.rst.txt  modules.rst.txt
api/: index.html  index.md
api/attachments/: index.html  index.md
api/exceptions/: index.html  index.md
api/filters/: index.html  index.md
api/helpers/: index.html  index.md
api/issue-comments/: index.html  index.md
api/issue-fields/: index.html  index.md
api/issue-links/: index.html  index.md
api/issue-search/: index.html  index.md
api/issue-worklogs/: index.html  index.md
api/issues/: index.html  index.md
api/jira-api/: index.html  index.md
api/metadata/: index.html  index.md
api/projects/: index.html  index.md
api/users/: index.html  index.md
changelog/: index.html
docs/: CNAME  changelog.md  conf.py  index.md  index.rst  installation.md  modules.rst
docs/api/: attachments.md  exceptions.md  filters.md  helpers.md  index.md  issue-comments.md  issue-fields.md  issue-links.md  issue-search.md  issue-worklogs.md  issues.md  jira-api.md  metadata.md  projects.md  users.md
docs/guide/: configuration.md  error-handling.md  high-level-helpers.md  rate-limiting.md
examples/: fields_examples.py  high_level_helpers.py  issue_comments.py  issue_examples.py  issue_fields.py  issue_search.py  issues.py  jql_examples.py  projects.py  search_examples.py
genindex/: index.html
guide/configuration/: index.html  index.md
guide/error-handling/: index.html  index.md
guide/high-level-helpers/: index.html  index.md
guide/rate-limiting/: index.html  index.md
installation/: index.html  index.md
jira2py/: __init__.py  fields.py  helpers.py  issue.py  issue_comments.py  issue_fields.py  issue_search.py  issues.py  jira.py  jira_base.py  jql.py
modules/: index.html
scripts/: README.md  bump_version.py  fetch_test_data.py
search/: index.html  search_index.json
src/jira2py/: __init__.py  exceptions.py  issue_comments.py  issue_fields.py  issue_search.py  issues.py  jira_base.py  models.py
src/jira2py/api/: __init__.py  api_base.py  attachments.py  filters.py  issue_comments.py  issue_fields.py  issue_links.py  issue_search.py  issue_worklogs.py  issues.py  jira_api_async.py  jira_api_base.py  jira_api_sync.py  metadata.py  projects.py  users.py
src/jira2py/api/issue_comments/: __init__.py  issue_comments.py  issue_comments_async.py  issue_comments_base.py  issue_comments_sync.py
src/jira2py/api/issue_fields/: __init__.py  issue_fields.py  issue_fields_async.py  issue_fields_base.py  issue_fields_sync.py
src/jira2py/api/issue_search/: __init__.py  issue_search.py  issue_search_async.py  issue_search_base.py  issue_search_sync.py
src/jira2py/api/issues/: __init__.py  issues_async.py  issues_base.py  issues_sync.py
src/jira2py/client/: __init__.py  async_.py  base.py  client_async.py  client_base.py  client_sync.py  credentials.py  factory.py  sync.py
src/jira2py/helpers/: __init__.py  _adf.py  _text.py  _utils.py  _validation.py  attachments.py  auth.py  comments.py  errors.py  facade.py  filters.py  issues.py  links.py  metadata.py  models.py  results.py  search.py  worklogs.py
tests/: README.md  __init__.py  conftest.py  test_attachments.py  test_client.py  test_exceptions.py  test_filters.py  test_helpers_attachments.py  test_helpers_auth.py  test_helpers_comments.py  test_helpers_contracts.py  test_helpers_facade.py  test_helpers_filters.py  test_helpers_issues.py  test_helpers_links.py  test_helpers_metadata.py  test_helpers_private_adf.py  test_helpers_private_text.py  test_helpers_private_utils.py  test_helpers_private_validation.py  test_helpers_search.py  test_helpers_worklogs.py  test_issue_comments.py  test_issue_fields.py  test_issue_links.py  test_issue_search.py  test_issue_worklogs.py  test_issues.py  test_metadata_api.py  test_projects.py  test_users.py
tests/fixtures/: README.md  changelogs.json  comments.json  fields.json  issue_details.json  search_results.json
tests/integration/: conftest.py  test_issue_comments_integration.py  test_issue_fields_integration.py  test_issue_search_integration.py  test_issues_integration.py  test_jira_base_integration.py
tests/unit/: test_issue_comments.py  test_issue_fields.py  test_issue_search.py  test_issues.py  test_jira_base.py
