[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "jira2py"
version = "0.4.0"
description = "The Python library to interact with Atlassian Jira REST API"
readme = "README.md"
authors = [{ name = "nEver1", email = "7fhhwpuuo@mozmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "email-validator>=2.3.0,<3",
    "pydantic>=2.11.0,<3",
    "python-dotenv>=1.1.0,<2",
    "httpx[http2]>=0.28.0,<1",
]

[project.urls]
Homepage = "https://github.com/en-ver/jira2py"
Repository = "https://github.com/en-ver/jira2py"
Documentation = "https://jira2py.org/"
"Issue Tracker" = "https://github.com/en-ver/jira2py/issues"

[project.optional-dependencies]
deployment = ["wheel", "twine", "build"]
dev = ["ipykernel", "ruff", "mypy", "pytest>=7.0", "pytest-cov>=4.0"]
docs = ["sphinx>=7.0.0", "pydata-sphinx-theme>=0.13.0", "sphinx-sitemap>=2.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jira2py = ["py.typed"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Less strict for tests
